Mon Dec  5 14:43:48 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/ExecutionManager/ExecutionManager.mpc

	Removed superfluous dependancy on Xerces. 

Sun Dec  4 11:13:32 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/StaticConfigurator/StaticDAnCEParser.mpc
	* DAnCE/tests/Config_Handlers/handler_test.mpb

	Fix linking errors on Tiger. 

Fri Dec  2 11:25:48 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/RepositoryManager/RepositoryManager.idl
	* DAnCE/RepositoryManager/RepositoryManager.mpc
	* DAnCE/RepositoryManager/RepositoryManager_Impl.cpp
	* DAnCE/RepositoryManager/RepositoryManager_Impl.h
	* DAnCE/RepositoryManager/Repository_Manager.cpp
	* DAnCE/RepositoryManager/Repository_Manager_conf.h
	* DAnCE/RepositoryManager/Update_Plan.cpp
	* DAnCE/RepositoryManager/Update_Plan.h

	Removed the deprecated RepositoryManager implementation. 
	
	* NEWS
	
	Updated the NEWS file to reflect this. 

Thu Dec  1 10:16:46 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* tools/Config_Handlers/Basic_Deployment_Data.hpp
	* tools/Config_Handlers/RT-CCM/CIAOServerResources.cpp
	* tools/Config_Handlers/RT-CCM/CIAOServerResources.hpp

	Fixed some errors caused by previous commit. 
	
Thu Dec  1 12:57:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/DomainApplicationManager/Deployment_Configuration.cpp:
          Use 0 instead of NULL, NULL is not portable

        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
        * DAnCE/NodeManager/NAM_Map.cpp:
          Initialise pointers with 0 and return false instead of 0
        * DAnCE/ExecutionManager/Execution_Manager_Impl.h:
          Removed not needed msvc pragma push/pop

        * DAnCE/NodeManager/NodeManager_Impl.cpp:
          Initialise pointers with 0 and removed some printf that seems some
          left over debugging statements

Wed Nov 30 16:24:43 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* docs/schema/xsc-banner.h
